CB-8807: Refactor cluster upgrade image filtering
In this commit I made the following changes:

- Refactor the filtering logic in ClusterUpgradeImageFilter. The filters are extracted into separate classes. This filters are using a common interface: UpgradeImageFilter
- Refactor the ImageFilterResult class. This contains a List<Image> instead of the Images object.
- Refactor the ImageFilterParams class. This class was extended with the cloudPlatform variable.